--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,4 @@ RewriteEngine on
 
 RewriteCond ${REQUEST_FILENAME} !-f
 RewriteCond ${REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ public/index.php?url=$1 [QSA,L]
+RewriteRule ^(.*)$ public/index.php?$1 [QSA,L]
